Spring security login implmentation updated

--- a/BookshareBackend/src/main/resources/static/templates/login.html
+++ b/BookshareBackend/src/main/resources/static/templates/login.html
@@ -34,6 +34,7 @@
                     <p class="login button"> 
                         <input type="submit" value="Login"/> 
                     </p>
+                    <input name="_csrf" type="hidden" value="1993da88-c0bd-4548-be40-47585cbca69c" />
                     <p class="change_link">
                         Not a member yet ?
                         <a href="" ng-click="loadSignup()" class="to_register">Join us</a>
