Front end bug fixes

--- a/BookshareBackend/src/main/resources/static/templates/dashboard.html
+++ b/BookshareBackend/src/main/resources/static/templates/dashboard.html
@@ -38,7 +38,7 @@
                 <p>
                     <input type="button" ng-click="profile()" value="Profile"/>
                     <input type="button" ng-click="history()" value="History"/>
-                    <input type="button" ng-click="addBook()" value="Add Book"/>
+                    <input type="button" ng-click="loadAddBook()" value="Add Book"/>
                     <input type="button" ng-click="myBooks()" value="My Books"/>
                 </p>
             </div>
