--- a/BookshareBackend/src/main/resources/static/templates/partials/addBook.html
+++ b/BookshareBackend/src/main/resources/static/templates/partials/addBook.html
@@ -4,7 +4,7 @@
         <label for="BookAdd" class="youmail"> Enter Book Details </label>
         <div class="row">
             <div class="col-md-10" style="margin-left:8%">
-                <form action="post" ng-submit="addBook()">
+                <form ng-submit="addBook()">
                     <input type="text" class="form-control" ng-model="newBook.bookTitle" name="title" placeholder="Enter Book Title Here" />
                     <input type="text" class="form-control" ng-model="newBook.bookAuthor" name="author" placeholder="Enter Author Here" />
                     <input type="text" class="form-control" ng-model="newBook.bookDesc" name="desc" placeholder="Enter Description Here" />
@@ -17,11 +17,11 @@
                    
                    <div class="row">
                      <div class="col-md-6">
-                        <pre>{{radioModel}}</pre>
+                        <pre>{{newBook.bookCondition}}</pre>
                         <span class="uname" style="font-size:larger">Book condition: </span>
                         <div style="margin-top:10px" class="btn-group">
-                            <label type="button" ng-model="radioModel" btn-radio="'New'" class="btn btn-primary" style="margin-right:0.5em">New</label>
-                            <label type="button" ng-model="radioModel" btn-radio="'Used'" class="btn btn-primary">Used</label>
+                            <label type="button" ng-model="newBook.bookCondition" btn-radio="'New'" class="btn btn-primary" style="margin-right:0.5em">New</label>
+                            <label type="button" ng-model="newBook.bookCondition" btn-radio="'Used'" class="btn btn-primary">Used</label>
                         </div>
                      </div>
                      <div class="col-md-6">
