--- a/BookshareBackend/src/main/resources/static/templates/dashboard.html
+++ b/BookshareBackend/src/main/resources/static/templates/dashboard.html
@@ -56,7 +56,7 @@
                             <input type="search" ng-model="keyval" name="search" placeholder="eg. Title, Author, ISBN etc." />    
                         </div>
                         <div class="col-md-2">
-                            <input type="button" ng-click="searchBook()" value="Search" />    
+                            <input type="button" ng-click="searchBook()" value="Search"><a ng-href="#/home/searchBook"></a></>    
                         </div>
                     </div>
                 </div>
