--- a/BookshareBackend/src/main/resources/static/templates/partials/profile.html
+++ b/BookshareBackend/src/main/resources/static/templates/partials/profile.html
@@ -15,10 +15,10 @@
                 </div>
                 <div class="col-md-8">
                     <div class="col-xs-12 col-sm-8" style="font-family: "Segoe UI", 'sans-serif';">
-                        <p style="text-decoration:underline; font-size:x-large">{{student.FirstName}} {{student.LastName}}</p>
-                        <p style="margin-top:1em"><span><strong>University: </strong>{{student.University}}</span></p>
-                        <p style="margin-top:1em"><span><strong>Email: </strong>{{student.Email}}</span></p>
-                        <p style="margin-top:1em"><span><strong>Phone: </strong>{{student.Phone}}</span></p>
+                        <p style="text-decoration:underline; font-size:x-large">{{FirstName}} {{LastName}}</p>
+                        <p style="margin-top:1em"><span><strong>University: </strong>{{University}}</span></p>
+                        <p style="margin-top:1em"><span><strong>Email: </strong>{{Email}}</span></p>
+                        <p style="margin-top:1em"><span><strong>Phone: </strong>{{Phone}}</span></p>
                     </div>
                 </div>
             </div>
