--- a/BookshareBackend/src/main/resources/static/templates/dashboard.html
+++ b/BookshareBackend/src/main/resources/static/templates/dashboard.html
@@ -55,9 +55,11 @@
                         <div class="col-md-10">
                             <input type="search" ng-model="keyval" name="search" placeholder="eg. Title, Author, ISBN etc." />    
                         </div>
+                        <form>
                         <div class="col-md-2">
-                            <input type="button" ng-click="searchBook()" value="Search"><a ng-href="#/home/searchBook"></a></>    
-                        </div>
+                            <input type="button" ng-click="searchBook()" value="Search"/>
+                         </div>
+                        </form>
                     </div>
                 </div>
             </div>
