--- a/BookshareBackend/src/main/resources/static/templates/partials/searchBooks.html
+++ b/BookshareBackend/src/main/resources/static/templates/partials/searchBooks.html
@@ -45,7 +45,7 @@
     		<div class="col-md-2">
 	            <div class="row" style="margin-top:2em">
 	                <div class="bidBtns"><input class="btn btn-primary btn-block" type="button" value="Buy"></div>
-	                <div class="bidBtns"><input class="btn btn-warning btn-block" type="button" value="Bid"></div>
+	                <div class="bidBtns"><input class="btn btn-warning btn-block" ng-click="loadBiddingPage(book)" type="button" value="Bid"></div>
 	                <div><input class="btn btn-success btn-block" type="button" value="Rent"></div>
 	            </div>
 	            
