--- a/BookshareBackend/src/main/resources/static/templates/partials/bid.html
+++ b/BookshareBackend/src/main/resources/static/templates/partials/bid.html
@@ -21,16 +21,14 @@
 		                    <span class="text-left" style="font-size:medium""><small><b>Condition: </b><span>{{book.bookCondition}}</span></small></span>
 		                    <span style="margin-left: 1em; margin-right: 1em">|</span>
 		                    <span class="text-left" style="font-size:medium; font-style:italic; font-weight: bold"><small><b>Selling price: </b><span>{{book.sellPrice}}</span></small></span>   
-		                	<span style="margin-left: 1em; margin-right: 1em">|</span>
-		                	<span class="text-left" style="font-size:medium; font-style:italic; font-weight: bold"><small><b>Rent price: </b><span>{{book.rentPrice}}</span></small></span>   
 		                </p>
 	            	</div>
 	    		</div>
 	    		<div class="col-md-2">
-	    			<div class="bidCont">
+	    			<div style="margin-top:2em">
 	    				<form ng-submit="placeBid()" >
-		    				<input type="number" placeholder="Eg. 10" ng-model="bidPrice"/>
-		    				<input type="button" value="Bid" />
+		    				<input class="form-control" type="number" placeholder="Eg. 10" ng-model="bidPrice"/>
+		    				<input type="button" value="Place your Bid" class="btn btn-info" style="width:100%"/>
 	    				</form>
 	    			</div>
     		    </div>
