--- a/BookshareBackend/src/main/resources/static/templates/partials/bid.html
+++ b/BookshareBackend/src/main/resources/static/templates/partials/bid.html
@@ -42,9 +42,9 @@
 		    	<div id="listContainer" ng-repeat="bid in bids">
 		    		<div ng-class-odd="'cssOdd'">
 			    		<div class="row">
-			    			<div class="col-md-4" style="border-right : solid #B7BBC1 1px">Date</div>
-			    			<div class="col-md-4" style="border-right : solid #B7BBC1 1px">Bidder Email</div>
-			    			<div class="col-md-4">Bid Price</div>
+			    			<div class="col-md-4" style="border-right : solid #B7BBC1 1px">{{bid.bidDate}}</div>
+			    			<div class="col-md-4" style="border-right : solid #B7BBC1 1px">{{bid.ownerEmail}}</div>
+			    			<div class="col-md-4">{{bid.bidPrice}}</div>
 			    		</div>
 		    		</div>
 		    	</div>
