ViewBids HTML page Add

--- a/BookshareBackend/src/main/resources/static/css/dashboard.css
+++ b/BookshareBackend/src/main/resources/static/css/dashboard.css
@@ -441,3 +441,9 @@ p.change_link{
 .cssOdd{
 	background-color : #DDDDDD;
 }
+
+.noBtnType{
+	border : none;
+	opacity : 0.65;
+	background: transparent;
+}
