--- a/BookshareBackend/src/main/resources/static/templates/partials/listBooks.html
+++ b/BookshareBackend/src/main/resources/static/templates/partials/listBooks.html
@@ -10,7 +10,7 @@
 
 <div id="wrapper-container">
     <div id="dataContainer" class="animate form">  
-    	 <label for="mybooks" class="youmail" >My books listing</label>
+    	<label for="mybooks" class="youmail" >My books listing</label>
 		<div class="emptyContainer" ng-if="booksList.length <= 0">User Haven't Posted any Book Yet.</div>
 	    <div class="container" ng-if="booksList.length > 0" ng-repeat="book in booksList">
 	    	<div class="row">
@@ -19,7 +19,7 @@
 	    		</div>
 	    		<div class="col-md-8">
 	    			 <div class="container" style="margin-left: -12em">
-		                <p class="text-left" style="font-size:x-large"><strong>Title: <span>{{book.bookTitle}}</span></strong></p>
+		                <p class="text-left" style="font-size:x-large"><strong>Title: <input type="button" ng-click="displayBids()" value={{book.bookTitle}} class="noBtnType" /></strong></p>
 		                <p class="text-left">
 		                    <span class="text-left" style="font-size:medium"><small><b>Author: </b><span>{{book.bookAuthor}}</span></small></span>
 		                    <span style="margin-left: 1em; margin-right: 1em">|</span>
