--- a/BookshareBackend/src/main/resources/static/templates/partials/listBooks.html
+++ b/BookshareBackend/src/main/resources/static/templates/partials/listBooks.html
@@ -19,7 +19,7 @@
 	    		</div>
 	    		<div class="col-md-8">
 	    			 <div class="container" style="margin-left: -12em">
-		                <p class="text-left" style="font-size:x-large"><strong>Title: <input type="button" ng-click="displayBids()" value={{book.bookTitle}} class="noBtnType" /></strong></p>
+		                <p class="text-left" style="font-size:x-large"><strong>Title: <input type="button" ng-click="displayBids(book.bookTitle)" value={{book.bookTitle}} class="noBtnType" /></strong></p>
 		                <p class="text-left">
 		                    <span class="text-left" style="font-size:medium"><small><b>Author: </b><span>{{book.bookAuthor}}</span></small></span>
 		                    <span style="margin-left: 1em; margin-right: 1em">|</span>
