Book buy implementation and front end enhancements

--- a/BookshareBackend/src/main/resources/static/templates/dashboard.html
+++ b/BookshareBackend/src/main/resources/static/templates/dashboard.html
@@ -36,6 +36,7 @@
             <div id="home" class="animate form">
                 <h1>DashBoard</h1>
                 <p>
+                	<input type="button" ng-click="browseBooks()" value="All Books"/>
                     <input type="button" ng-click="profile()" value="Profile"/>
                     <input type="button" ng-click="history()" value="History"/>
                     <input type="button" ng-click="loadAddBook()" value="Add Book"/>
