--- a/BookshareBackend/src/main/resources/static/templates/partials/addBook.html
+++ b/BookshareBackend/src/main/resources/static/templates/partials/addBook.html
@@ -17,7 +17,7 @@
                    
                    <div class="row">
                      <div class="col-md-6">
-                        <pre>{{newBook.bookCondition}}</pre>
+                        <!-- <pre>{{newBook.bookCondition}}</pre> --> 
                         <span class="uname" style="font-size:larger">Book condition: </span>
                         <div style="margin-top:10px" class="btn-group">
                             <label type="button" ng-model="newBook.bookCondition" btn-radio="'New'" class="btn btn-primary" style="margin-right:0.5em">New</label>
@@ -25,7 +25,7 @@
                         </div>
                      </div>
                      <div class="col-md-6">
-                         <pre>{{newBook}}</pre>
+                       <!-- <pre>{{newBook}}</pre>  -->  
                          <span style="font-size:larger">Available for:</span>
                         <div style="margin-top:10px" class="btn-group">
                             <label ng-model="newBook.forBuy" class="btn btn-info" style="margin-right:0.5em" btn-checkbox>Buy</label>
