--- a/BookshareBackend/src/main/resources/static/templates/partials/profile.html
+++ b/BookshareBackend/src/main/resources/static/templates/partials/profile.html
@@ -1,6 +1,6 @@
 <script>
     var image = Math.floor((Math.random() * 100) + 1);
-    document.getElementById('profilepic').src="http://api.randomuser.me/portraits/med/women/"+image+".jpg";
+    //document.getElementById('profilepic').src="http://api.randomuser.me/portraits/med/women/"+image+".jpg";
 </script>
 
 <div id="wrapper-container">
@@ -10,7 +10,7 @@
             <div class="row">
                 <div class="col-md-4">
                      <div class="col-xs-12 col-sm-8">
-                            <img id="profilepic" alt="" class="center-block img-circle img-responsive">
+                            <img id="profilepic" src="images/profile.png" alt="" class="center-block img-circle img-responsive">
                      </div>
                 </div>
                 <div class="col-md-8">
