--- a/BookshareBackend/src/main/resources/static/templates/partials/viewBids.html
+++ b/BookshareBackend/src/main/resources/static/templates/partials/viewBids.html
@@ -15,7 +15,7 @@
 		    		<div ng-class-odd="'cssOdd'">
 			    		<div class="row">
 			    			<div class="col-md-3" style="border-right : solid #B7BBC1 1px; text-align:center">{{bid.bidDate}}</div>
-			    			<div class="col-md-3" style="border-right : solid #B7BBC1 1px; text-align:center">{{bid.ownerEmail}}</div>
+			    			<div class="col-md-3" style="border-right : solid #B7BBC1 1px; text-align:center">{{bid.bidderId}}</div>
 			    			<div class="col-md-3" style="border-right : solid #B7BBC1 1px; text-align:center">{{bid.bidPrice}}</div>
 			    			<div class="col-md-3"><input type="button" ng-click="acceptBid(bid)" value="Accept" style="margin-bottom:0.1em"></div>
 			    		</div>
