--- a/BookshareBackend/src/main/resources/static/templates/partials/searchBooks.html
+++ b/BookshareBackend/src/main/resources/static/templates/partials/searchBooks.html
@@ -39,7 +39,7 @@
 	                    <span class="text-left" style="font-size:medium; font-style:italic; font-weight: bold"><small><b>Selling price: </b><span>{{book.sellPrice}}</span></small></span>   
 	                	<span style="margin-left: 1em; margin-right: 1em">|</span>
 	                	<span class="text-left" ng-if="book.rentDuration>0" style="font-size:medium; font-style:italic; font-weight: bold"><small><b>Rent price: </b><span>{{book.rentPrice}}</span></small></span>   
-	               		<p class="text-left" ng-if="book.rentDuration>0" style="font-size:medium; font-style:italic; font-weight: bold"><small><b>Rent duration: </b><span>{{book.rentDuration}}</span></small></p>   
+	               		<p class="text-left" ng-if="book.rentDuration>0" style="font-size:medium; font-style:italic; font-weight: bold"><small><b>Rent duration: </b><span>{{book.rentDuration}}</span></small> days</p>   
 	               		
 	                </p>
             	</div>
